[project]
name = "apply-engine"
version = "0.1.0"
description = "Auto-fill and submit Greenhouse job applications using stored Q&A and Claude for new questions."
requires-python = ">=3.10"
dependencies = [
    "google-genai>=1.0.0",
    "playwright>=1.48.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "pypdf>=5.0.0",
    "fpdf2>=2.7.0",
    "python-docx>=1.1.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
apply = "apply_engine.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["apply_engine*"]
